--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
     <!-- Add your site or application content here -->
     <navbar></navbar>
     <div class="grid bg-snow" style="    margin-top: -3px;" ng-controller="HomeController as ctrl">
-    <main ui-view=""></main>
+        <main ui-view=""></main>
     </div>
-    
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
     (function(i, s, o, g, r, a, m) {
@@ -58,14 +57,14 @@
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
     <!-- bower:js -->
-    <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
-    <script type="text/javascript" src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script type="text/javascript" src="bower_components/angular/angular.js"></script>
+    <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script type="text/javascript" src="app/lib/highlightjs.min.js"></script>
     <script type="text/javascript" src="app/lib/angular.highlightjs.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
     <!-- endbower -->
     <script type="text/javascript" src="app/app.js"></script>
-<!-- <script src="app/admin/admin.module.js"></script>
+    <!-- <script src="app/admin/admin.module.js"></script>
     <script src="app/admin/admin.controller.js"></script>
     <script src="app/admin/admin.router.js"></script>
     <script src="app/app.constant.js"></script> -->
