--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
     <title>EHR</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <!-- Place favicon.ico and ./apple-touch-icon.png in the root directory -->
     <!-- bower:css -->
     <!-- endbower -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="app/styles/normalize.css">
-    <link rel="stylesheet" href="app/styles/butter.css">
-    <link rel="stylesheet" href="app/styles/hljs.css">
-    <link rel="stylesheet" href="app/styles/utils.css">
-    <link rel="stylesheet" href="app/styles/site.css">
-    <link rel="stylesheet" href="app/styles/animate.css">
-    <link rel="stylesheet" href="app/styles/icon.css">
+    <link rel="stylesheet" href="./app/styles/normalize.css">
+    <link rel="stylesheet" href="./app/styles/butter.css">
+    <link rel="stylesheet" href="./app/styles/hljs.css">
+    <link rel="stylesheet" href="./app/styles/utils.css">
+    <link rel="stylesheet" href="./app/styles/site.css">
+    <link rel="stylesheet" href="./app/styles/animate.css">
+    <link rel="stylesheet" href="./app/styles/icon.css">
 </head>
 
-<body ng-app="butter">
+<body ng-./app="butter">
     <!--[if lt IE 7]>
-      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browseh./appy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <!-- Add your site or application content here -->
+    <!-- Add your site or ./application content here -->
     <navbar></navbar>
     <div class="grid bg-snow" style="    margin-top: -3px;" ng-controller="HomeController as ctrl">
         <main ui-view=""></main>
@@ -59,15 +59,15 @@
     <!-- bower:js -->
     <script type="text/javascript" src="bower_components/angular/angular.js"></script>
     <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-    <script type="text/javascript" src="app/lib/highlightjs.min.js"></script>
-    <script type="text/javascript" src="app/lib/angular.highlightjs.min.js"></script>
+    <script type="text/javascript" src="./app/lib/highlightjs.min.js"></script>
+    <script type="text/javascript" src="./app/lib/angular.highlightjs.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
     <!-- endbower -->
-    <script type="text/javascript" src="app/app.js"></script>
-    <!-- <script src="app/admin/admin.module.js"></script>
-    <script src="app/admin/admin.controller.js"></script>
-    <script src="app/admin/admin.router.js"></script>
-    <script src="app/app.constant.js"></script> -->
+    <script type="text/javascript" src="./app/app.js"></script>
+    <!-- <script src="./app/admin/admin.module.js"></script>
+    <script src="./app/admin/admin.controller.js"></script>
+    <script src="./app/admin/admin.router.js"></script>
+    <script src="./app/./app.constant.js"></script> -->
 </body>
 
 </html>
