--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
     <title>Butter UI</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and https://raw.githubusercontent.com/codejets/butter/master/apple-touch-icon.png in the root directory -->
+    <!-- Place favicon.ico and https://rawgit.com/codejets/butter/master/apple-touch-icon.png in the root directory -->
     <!-- bower:css -->
     <!-- endbower -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/codejets/butter/master/app/styles/normalize.css">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/codejets/butter/master/app/styles/butter.css">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/codejets/butter/master/app/styles/hljs.css">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/codejets/butter/master/app/styles/utils.css">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/codejets/butter/master/app/styles/site.css">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/codejets/butter/master/app/styles/animate.css">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/codejets/butter/master/app/styles/icon.css">
+    <link rel="stylesheet" href="https://rawgit.com/codejets/butter/master/app/styles/normalize.css">
+    <link rel="stylesheet" href="https://rawgit.com/codejets/butter/master/app/styles/butter.css">
+    <link rel="stylesheet" href="https://rawgit.com/codejets/butter/master/app/styles/hljs.css">
+    <link rel="stylesheet" href="https://rawgit.com/codejets/butter/master/app/styles/utils.css">
+    <link rel="stylesheet" href="https://rawgit.com/codejets/butter/master/app/styles/site.css">
+    <link rel="stylesheet" href="https://rawgit.com/codejets/butter/master/app/styles/animate.css">
+    <link rel="stylesheet" href="https://rawgit.com/codejets/butter/master/app/styles/icon.css">
 </head>
 
-<body ng-https://raw.githubusercontent.com/codejets/butter/master/app="butter">
+<body ng-https://rawgit.com/codejets/butter/master/app="butter">
     <!--[if lt IE 7]>
-      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehhttps://raw.githubusercontent.com/codejets/butter/master/appy.com/">upgrade your browser</a> to improve your experience.</p>
+      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehhttps://rawgit.com/codejets/butter/master/appy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <!-- Add your site or https://raw.githubusercontent.com/codejets/butter/master/application content here -->
+    <!-- Add your site or https://rawgit.com/codejets/butter/master/application content here -->
     <navbar></navbar>
     <div class="grid bg-snow" style="    margin-top: -3px;" ng-controller="HomeController as ctrl">
         <main ui-view=""></main>
@@ -53,21 +53,21 @@
     ga('send', 'pageview');
     </script>
     <!--[if lt IE 9]>
-    <script src="https://raw.githubusercontent.com/codejets/butter/master/bower_components/es5-shim/es5-shim.js"></script>
-    <script src="https://raw.githubusercontent.com/codejets/butter/master/bower_components/json3/lib/json3.min.js"></script>
+    <script src="https://rawgit.com/codejets/butter/master/bower_components/es5-shim/es5-shim.js"></script>
+    <script src="https://rawgit.com/codejets/butter/master/bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
     <!-- bower:js -->
-    <script type="text/javascript" src="https://raw.githubusercontent.com/codejets/butter/master/bower_components/angular/angular.js"></script>
-    <script type="text/javascript" src="https://raw.githubusercontent.com/codejets/butter/master/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-    <script type="text/javascript" src="https://raw.githubusercontent.com/codejets/butter/master/app/lib/highlightjs.min.js"></script>
-    <script type="text/javascript" src="https://raw.githubusercontent.com/codejets/butter/master/app/lib/angular.highlightjs.min.js"></script>
+    <script type="text/javascript" src="https://rawgit.com/codejets/butter/master/bower_components/angular/angular.js"></script>
+    <script type="text/javascript" src="https://rawgit.com/codejets/butter/master/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script type="text/javascript" src="https://rawgit.com/codejets/butter/master/app/lib/highlightjs.min.js"></script>
+    <script type="text/javascript" src="https://rawgit.com/codejets/butter/master/app/lib/angular.highlightjs.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
     <!-- endbower -->
-    <script type="text/javascript" src="https://raw.githubusercontent.com/codejets/butter/master/app/app.js"></script>
-    <!-- <script src="https://raw.githubusercontent.com/codejets/butter/master/app/admin/admin.module.js"></script>
-    <script src="https://raw.githubusercontent.com/codejets/butter/master/app/admin/admin.controller.js"></script>
-    <script src="https://raw.githubusercontent.com/codejets/butter/master/app/admin/admin.router.js"></script>
-    <script src="https://raw.githubusercontent.com/codejets/butter/master/app/https://raw.githubusercontent.com/codejets/butter/master/app.constant.js"></script> -->
+    <script type="text/javascript" src="https://rawgit.com/codejets/butter/master/app/app.js"></script>
+    <!-- <script src="https://rawgit.com/codejets/butter/master/app/admin/admin.module.js"></script>
+    <script src="https://rawgit.com/codejets/butter/master/app/admin/admin.controller.js"></script>
+    <script src="https://rawgit.com/codejets/butter/master/app/admin/admin.router.js"></script>
+    <script src="https://rawgit.com/codejets/butter/master/app/https://rawgit.com/codejets/butter/master/app.constant.js"></script> -->
 </body>
 
 </html>
