--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="https://rawgit.com/codejets/butter/master/app/styles/icon.css">
 </head>
 
-<body ng-https://rawgit.com/codejets/butter/master/app="butter">
+<body ng-app="butter">
     <!--[if lt IE 7]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehhttps://rawgit.com/codejets/butter/master/appy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
