--- a/app/pages/components.html
+++ b/app/pages/components.html
@@ -1,3 +1,4 @@
+
 <div class="grid">
     <div class="grid--m marginTop-xl">
         <h1 class="textAlign-center fontSize-xxxl link--dark margin-s fontWeight-light"> All Components and Utilities </h1>
@@ -16,7 +17,7 @@
                     </div>
                     <div class="display-block link c-slate c-theme--hover">
                         <div class="image-container">
-                            <img src="app/images/grid.png" style="width:100%;" alt="">
+                            <img src="https://rawgit.com/codejets/butter/master/https://rawgit.com/codejets/butter/master/app/images/grid.png" style="width:100%;" alt="">
                         </div>
                     </div>
                 </div>
@@ -38,7 +39,7 @@
                     </div>
                     <div class="display-block link c-slate c-theme--hover">
                         <div class="image-container">
-                            <img src="app/images/texttransform.png" style="width:100%;" alt="">
+                            <img src="https://rawgit.com/codejets/butter/master/app/images/texttransform.png" style="width:100%;" alt="">
                         </div>
                     </div>
                 </div>
@@ -60,7 +61,7 @@
                     </div>
                     <div class="display-block link c-slate c-theme--hover">
                         <div class="image-container">
-                            <img src="app/images/modal.png" style="width:100%;" alt="">
+                            <img src="https://rawgit.com/codejets/butter/master/app/images/modal.png" style="width:100%;" alt="">
                         </div>
                     </div>
                 </div>
@@ -85,7 +86,7 @@
                     </div>
                     <div class="display-block link c-slate c-theme--hover">
                         <div class="image-container">
-                            <img src="app/images/texttransform.png" style="width:100%;" alt="">
+                            <img src="https://rawgit.com/codejets/butter/master/app/images/texttransform.png" style="width:100%;" alt="">
                         </div>
                     </div>
                 </div>
@@ -108,7 +109,7 @@
                     </div>
                     <div class="display-block link c-slate c-theme--hover">
                         <div class="image-container">
-                            <img src="app/images/texttransform.png" style="width:100%;" alt="">
+                            <img src="https://rawgit.com/codejets/butter/master/app/images/texttransform.png" style="width:100%;" alt="">
                         </div>
                     </div>
                 </div>
@@ -131,7 +132,7 @@
                     </div>
                     <div class="display-block link c-slate c-theme--hover">
                         <div class="image-container">
-                            <img src="app/images/grid.png" style="width:100%;" alt="">
+                            <img src="https://rawgit.com/codejets/butter/master/app/images/grid.png" style="width:100%;" alt="">
                         </div>
                     </div>
                 </div>
@@ -154,7 +155,7 @@
                     </div>
                     <div class="display-block link c-slate c-theme--hover">
                         <div class="image-container">
-                            <img src="app/images/do.png" style="width:100%;" alt="">
+                            <img src="https://rawgit.com/codejets/butter/master/app/images/do.png" style="width:100%;" alt="">
                         </div>
                     </div>
                 </div>
@@ -177,7 +178,7 @@
                     </div>
                     <div class="display-block link c-slate c-theme--hover">
                         <div class="image-container">
-                            <img src="app/images/modal.png" style="width:100%;" alt="">
+                            <img src="https://rawgit.com/codejets/butter/master/app/images/modal.png" style="width:100%;" alt="">
                         </div>
                     </div>
                 </div>
