--- a/app/pages/overview.html
+++ b/app/pages/overview.html
@@ -1,6 +1,6 @@
 <div class="grid height-100vh">
 	<div class="grid--s">
-		<h2 class="fontSize-xxxxl fontWeight-light padding-xl textAlign-center" style="padding-top: 140px;">Butter UI, a framework written for rapid prototyping without the looking bootstrap made.</h2>
+		<h2 class="fontSize-xxxxl fontWeight-light padding-xl textAlign-center" style="padding-top: 140px;">Butter UI, a framework written for rapid prototyping without looking bootstrap made.</h2>
 		<a class="button borderRadius-m button--responsive button--flat bg-theme bg-theme--d--hover" ui-sref="components">Getting Started</a>
 	</div>
 </div>
